--- a/.gitignore
+++ b/.gitignore
@@ -99,9 +99,11 @@ celerybeat-schedule.*
 
 # Environments 
 .env 
-.venv 
+.venv
+.venv10 
 env/ 
-venv/ 
+venv/
+venv10/ 
 ENV/ 
 env.bak/ 
 venv.bak/ 
